# edinet_fundamentals

./: README.md  document.txt  main.py  pyproject.toml
files/xbrl/: S100NIKB.xbrl
utils/: file.py
